kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web # Название нашего объекта Deployment
spec:
  replicas: 3 # Начнем с одного пода
  selector: # Укажем, какие поды относятся к нашему Deployment:
    matchLabels: # - это поды с меткой
      app: web # app и ее значением web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0%
      maxSurge: 100%
  template: # Теперь зададим шаблон конфигурации пода
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: fei84/web:v0.0.1
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket:  
            port: 8000
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx
        - name: app
          mountPath: /app
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: app
          emptyDir: {}
